--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,25 +2,25 @@
   --color-blue:#34547a;
   --color-discription:#717171;
   --color-light:#eeeff1;
-  --color-white:#ffffff;
-  --color-black:#000000;
+  --color-white:#fff;
+  --color-black:#000;
   --font-family:"Roboto", sans-serif;
   --font-size:16px;
   --line-height:1.64;
-  --letter-spacing:0.1em;
+  --letter-spacing:.1em;
   --container-primary:1110px;
   --container-secondary:540px;
   --gap:20px;
-  --gap-sm:calc(var(--gap) * 0.5);
+  --gap-sm:calc(var(--gap) * .5);
   --gap-md:calc(var(--gap) * 1.5);
   --gap-lg:calc(var(--gap) * 2);
 }
 
 *{
-  margin:0;
-  padding:0;
   -webkit-box-sizing:border-box;
           box-sizing:border-box;
+  margin:0;
+  padding:0;
   list-style-type:none;
 }
 
@@ -36,23 +36,23 @@ html{
 
 .item-hidden{
   position:absolute;
+  overflow:hidden;
+  clip:rect(0 0 0 0);
   width:1px;
   height:1px;
   margin:-1px;
-  border:0;
   padding:0;
   white-space:nowrap;
+  border:0;
   -webkit-clip-path:inset(100%);
           clip-path:inset(100%);
-  clip:rect(0 0 0 0);
-  overflow:hidden;
 }
 
 .header{
   width:100%;
-  background-color:var(--color-light);
   padding-top:69px;
   padding-bottom:141px;
+  background-color:var(--color-light);
 }
 
 .navbar{
@@ -69,16 +69,16 @@ html{
 }
 
 .navbar__link{
-  letter-spacing:var(--letter-spacing);
-  display:block;
-  color:var(--color-black);
-  padding:0.5em 3px 0.5em 0;
   line-height:var(--line-height);
+  display:block;
+  padding:0.5em 3px 0.5em 0;
+  letter-spacing:var(--letter-spacing);
+  color:var(--color-black);
 }
 
 .navbar__link--active{
-  color:var(--color-blue);
   font-weight:500;
+  color:var(--color-blue);
 }
 
 .content{
@@ -89,42 +89,42 @@ html{
   -webkit-box-direction:normal;
       -ms-flex-direction:column;
           flex-direction:column;
+  max-width:var(--container-secondary);
   -webkit-box-align:self-start;
       -ms-flex-align:self-start;
           align-items:self-start;
-  max-width:var(--container-secondary);
 }
 
 .content__title{
   font-size:3rem;
-  line-height:var(--line-height);
   font-weight:500;
+  line-height:var(--line-height);
   margin:0 0 33px;
 }
 
 .content__description{
-  color:var(--color-discription);
   font-weight:400;
   line-height:var(--line-height);
   margin-bottom:57px;
+  color:var(--color-discription);
 }
 
 .content__link{
-  color:var(--color-white);
-  min-width:225px;
-  min-height:65px;
-  background-color:var(--color-blue);
-  padding:0.5em 1em;
   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;
+  min-width:225px;
+  min-height:65px;
+  padding:0.5em 1em;
+  letter-spacing:var(--letter-spacing);
+  color:var(--color-white);
+  background-color:var(--color-blue);
   -webkit-box-pack:center;
       -ms-flex-pack:center;
           justify-content:center;
   -webkit-box-align:center;
       -ms-flex-align:center;
           align-items:center;
-  letter-spacing:var(--letter-spacing);
 }
 
 .section{
@@ -134,25 +134,25 @@ html{
 
 .about__title{
   font-size:2rem;
-  line-height:var(--line-height);
   font-weight:500;
-  text-align:center;
+  line-height:var(--line-height);
   padding-bottom:50px;
+  text-align:center;
 }
 
 .about__description{
-  color:var(--color-discription);
-  line-height:var(--line-height);
   font-weight:400;
-  text-align:center;
-  margin:0 auto;
+  line-height:var(--line-height);
   width:540px;
   height:67px;
+  margin:0 auto;
+  text-align:center;
+  color:var(--color-discription);
 }
 
 .experience{
-  background-color:var(--color-blue);
   padding:100px 0 100px 0;
+  background-color:var(--color-blue);
 }
 
 .experience__list{
@@ -172,7 +172,6 @@ html{
 }
 
 .experience-item__description{
-  padding-left:20px;
   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;
@@ -180,6 +179,7 @@ html{
   -webkit-box-direction:normal;
       -ms-flex-direction:column;
           flex-direction:column;
+  padding-left:20px;
   -webkit-box-pack:space-evenly;
       -ms-flex-pack:space-evenly;
           justify-content:space-evenly;
@@ -198,38 +198,38 @@ html{
 
 .work__title{
   font-size:2rem;
-  line-height:var(--line-height);
   font-weight:500;
-  text-align:center;
+  line-height:var(--line-height);
   padding-bottom:50px;
+  text-align:center;
 }
 
 .work__description{
-  color:var(--color-discription);
-  line-height:var(--line-height);
   font-weight:400;
-  text-align:center;
-  margin:0 auto;
+  line-height:var(--line-height);
   width:540px;
   height:67px;
+  margin:0 auto;
+  text-align:center;
+  color:var(--color-discription);
 }
 
 .video{
-  padding-bottom:100px;
   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;
+  padding-bottom:100px;
   -webkit-box-pack:center;
       -ms-flex-pack:center;
           justify-content:center;
 }
 
 .video__item{
-  -webkit-animation-name:video;
-          animation-name:video;
   width:100%;
   height:600px;
   margin:0 auto;
+  -webkit-animation-name:video;
+          animation-name:video;
 }
 
 .law{
