--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,3 @@
-:root{
-  --color-blue:#34547a;
-  --color-discription:#717171;
-  --color-light:#eeeff1;
-  --color-white:#fff;
-  --color-black:#000;
-  --font-family:"Roboto", sans-serif;
-  --font-size:16px;
-  --line-height:1.64;
-  --letter-spacing:.1em;
-  --container-primary:1110px;
-  --container-secondary:540px;
-  --gap:20px;
-  --gap-sm:calc(var(--gap) * .5);
-  --gap-md:calc(var(--gap) * 1.5);
-  --gap-lg:calc(var(--gap) * 2);
-}
-
-*{
-  -webkit-box-sizing:border-box;
-          box-sizing:border-box;
-  margin:0;
-  padding:0;
-  list-style-type:none;
-}
-
-html{
-  font-family:"Roboto", sans-serif;
-  font-size:var(--font-size);
-}
-
-.container{
-  width:min(100% - var(--gap-lg), var(--container-primary));
-  margin-inline:auto;
-}
-
 .item-hidden{
   position:absolute;
   overflow:hidden;
@@ -48,11 +12,29 @@ html{
           clip-path:inset(100%);
 }
 
+.container{
+  width:min(100% - 40px, 1110px);
+  margin-inline:auto;
+}
+
+*{
+  -webkit-box-sizing:border-box;
+          box-sizing:border-box;
+  margin:0;
+  padding:0;
+  list-style-type:none;
+}
+
+html{
+  font-family:"Roboto", sans-serif;
+  font-size:16px;
+}
+
 .header{
   width:100%;
   padding-top:69px;
   padding-bottom:141px;
-  background-color:var(--color-light);
+  background-color:#eeeff1;
 }
 
 .navbar{
@@ -65,20 +47,20 @@ html{
   display:flex;
   -ms-flex-wrap:wrap;
       flex-wrap:wrap;
-  gap:10px var(--gap-lg);
+  gap:10px 40px;
 }
 
 .navbar__link{
-  line-height:var(--line-height);
+  line-height:1.64;
   display:block;
   padding:0.5em 3px 0.5em 0;
-  letter-spacing:var(--letter-spacing);
-  color:var(--color-black);
+  letter-spacing:0.1em;
+  color:#000;
 }
 
 .navbar__link--active{
   font-weight:500;
-  color:var(--color-blue);
+  color:#34547a;
 }
 
 .content{
@@ -89,7 +71,7 @@ html{
   -webkit-box-direction:normal;
       -ms-flex-direction:column;
           flex-direction:column;
-  max-width:var(--container-secondary);
+  max-width:540px;
   -webkit-box-align:self-start;
       -ms-flex-align:self-start;
           align-items:self-start;
@@ -98,15 +80,15 @@ html{
 .content__title{
   font-size:3rem;
   font-weight:500;
-  line-height:var(--line-height);
+  line-height:1.64;
   margin:0 0 33px;
 }
 
 .content__description{
   font-weight:400;
-  line-height:var(--line-height);
+  line-height:1.64;
   margin-bottom:57px;
-  color:var(--color-discription);
+  color:#717171;
 }
 
 .content__link{
@@ -116,9 +98,55 @@ html{
   min-width:225px;
   min-height:65px;
   padding:0.5em 1em;
-  letter-spacing:var(--letter-spacing);
-  color:var(--color-white);
-  background-color:var(--color-blue);
+  letter-spacing:0.1em;
+  color:#fff;
+  background-color:#34547a;
+  -webkit-box-pack:center;
+      -ms-flex-pack:center;
+          justify-content:center;
+  -webkit-box-align:center;
+      -ms-flex-align:center;
+          align-items:center;
+}
+
+.content{
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient:vertical;
+  -webkit-box-direction:normal;
+      -ms-flex-direction:column;
+          flex-direction:column;
+  max-width:540px;
+  -webkit-box-align:self-start;
+      -ms-flex-align:self-start;
+          align-items:self-start;
+}
+
+.content__title{
+  font-size:3rem;
+  font-weight:500;
+  line-height:1.64;
+  margin:0 0 33px;
+}
+
+.content__description{
+  font-weight:400;
+  line-height:1.64;
+  margin-bottom:57px;
+  color:#717171;
+}
+
+.content__link{
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  min-width:225px;
+  min-height:65px;
+  padding:0.5em 1em;
+  letter-spacing:0.1em;
+  color:#fff;
+  background-color:#34547a;
   -webkit-box-pack:center;
       -ms-flex-pack:center;
           justify-content:center;
@@ -135,24 +163,24 @@ html{
 .about__title{
   font-size:2rem;
   font-weight:500;
-  line-height:var(--line-height);
+  line-height:1.64;
   padding-bottom:50px;
   text-align:center;
 }
 
 .about__description{
   font-weight:400;
-  line-height:var(--line-height);
+  line-height:1.64;
   width:540px;
   height:67px;
   margin:0 auto;
   text-align:center;
-  color:var(--color-discription);
+  color:#717171;
 }
 
 .experience{
   padding:100px 0 100px 0;
-  background-color:var(--color-blue);
+  background-color:#34547a;
 }
 
 .experience__list{
@@ -193,25 +221,25 @@ html{
   -webkit-box-direction:reverse;
       -ms-flex-direction:row-reverse;
           flex-direction:row-reverse;
-  color:var(--color-white);
+  color:#fff;
 }
 
 .work__title{
   font-size:2rem;
   font-weight:500;
-  line-height:var(--line-height);
+  line-height:1.64;
   padding-bottom:50px;
   text-align:center;
 }
 
 .work__description{
   font-weight:400;
-  line-height:var(--line-height);
+  line-height:1.64;
   width:540px;
   height:67px;
   margin:0 auto;
   text-align:center;
-  color:var(--color-discription);
+  color:#717171;
 }
 
 .video{
@@ -233,11 +261,11 @@ html{
 }
 
 .law{
-  background-color:var(--color-blue);
+  background-color:#34547a;
 }
 
 .law__content{
-  color:var(--color-white);
+  color:#fff;
 }
 
 .law__title{
