--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,122 +1,10 @@
-@use 'variables' as *;
+@use 'mixins/index' as *;
+@use 'presets/index' as *;
 @use 'common/index' as *;
 @use 'section/index' as *;
 
 
-.content {
-    display: flex;
-    flex-direction: column;
-    max-width: $container-secondary;
-    align-items: self-start;
-}
-.content__title {
-    font-size: 3rem;
-    font-weight: 500;
-    line-height: $line-height;
-    margin: 0 0 33px;
-}
-.content__description {
-    font-weight: 400;
-    line-height: $line-height;
-    margin-bottom: 57px;
-    color: $color-description;
-}
-.content__link {
-    display: flex;
-    min-width: 225px;
-    min-height: 65px;
-    padding: .5em 1em;
-    letter-spacing: $letter-spacing;
-    color: $color-white;
-    background-color: $color-blue;
-    justify-content: center;
-    align-items: center;
-}
-.section {
-    padding-top: 101px;
-    padding-bottom: 89px;
-}
-.about__title {
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: $line-height;
-    padding-bottom: 50px;
-    text-align: center;
-}
-.about__description {
-    font-weight: 400;
-    line-height: $line-height;
-    width: 540px;
-    height: 67px;
-    margin: 0 auto;
-    text-align: center;
-    color: $color-description;
-}
-.experience {
-    padding: 100px 0 100px 0;
-    background-color: $color-blue;
-}
-.experience__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 48px;
-    justify-content: center;
-}
-.experience-item__number {
-    font-size: 1.3125rem;
-}
-.experience-item__description {
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
-    justify-content: space-evenly;
-}
-.experience-item {
-    display: flex;
-    flex-direction: row-reverse;
-    color: $color-white;
-}
 
-.work__title {
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: $line-height;
-    padding-bottom: 50px;
-    text-align: center;
-}
-.work__description {
-    font-weight: 400;
-    line-height: $line-height;
-    width: 540px;
-    height: 67px;
-    margin: 0 auto;
-    text-align: center;
-    color: $color-description;
-}
-.video {
-    display: flex;
-    padding-bottom: 100px;
-    justify-content: center;
-}
-.video__item {
-    width: 100%;
-    height: 600px;
-    margin: 0 auto;
-    animation-name: video;
-}
-.law {
-    background-color: $color-blue;
-}
-.law__content {
-    color: $color-white;
-}
-.law__title {
-    padding-top: 50px;
-    padding-bottom: 21px;
-}
-.law__description {
-    padding-bottom: 50px;
-}
 
 @media (min-width: 375px) {
     .about__description {
