--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,138 @@
+@charset "UTF-8";
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video{
+  font-size:100%;
+  margin:0;
+  padding:0;
+  vertical-align:baseline;
+  border:0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section{
+  display:block;
+}
+ol,
+ul{
+  list-style:none;
+}
+blockquote,
+q{
+  quotes:none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after{
+  content:"";
+}
+table{
+  border-spacing:0;
+  border-collapse:collapse;
+}
+body{
+  line-height:1;
+  color:#000;
+  background-color:#fff;
+}
+a{
+  text-decoration:none;
+  color:inherit;
+}
+img{
+  display:block;
+  max-width:100%;
+  height:auto;
+}
+
 .item-hidden{
   position:absolute;
   overflow:hidden;
@@ -15,6 +150,11 @@
 .container{
   width:min(100% - 40px, 1110px);
   margin-inline:auto;
+}
+
+.section{
+  padding-top:101px;
+  padding-bottom:89px;
 }
 
 *{
@@ -81,7 +221,7 @@ html{
   font-size:3rem;
   font-weight:500;
   line-height:1.64;
-  margin:0 0 33px;
+  margin:0 0 32px;
 }
 
 .content__description{
@@ -107,57 +247,6 @@ html{
   -webkit-box-align:center;
       -ms-flex-align:center;
           align-items:center;
-}
-
-.content{
-  display:-webkit-box;
-  display:-ms-flexbox;
-  display:flex;
-  -webkit-box-orient:vertical;
-  -webkit-box-direction:normal;
-      -ms-flex-direction:column;
-          flex-direction:column;
-  max-width:540px;
-  -webkit-box-align:self-start;
-      -ms-flex-align:self-start;
-          align-items:self-start;
-}
-
-.content__title{
-  font-size:3rem;
-  font-weight:500;
-  line-height:1.64;
-  margin:0 0 33px;
-}
-
-.content__description{
-  font-weight:400;
-  line-height:1.64;
-  margin-bottom:57px;
-  color:#717171;
-}
-
-.content__link{
-  display:-webkit-box;
-  display:-ms-flexbox;
-  display:flex;
-  min-width:225px;
-  min-height:65px;
-  padding:0.5em 1em;
-  letter-spacing:0.1em;
-  color:#fff;
-  background-color:#34547a;
-  -webkit-box-pack:center;
-      -ms-flex-pack:center;
-          justify-content:center;
-  -webkit-box-align:center;
-      -ms-flex-align:center;
-          align-items:center;
-}
-
-.section{
-  padding-top:101px;
-  padding-bottom:89px;
 }
 
 .about__title{
