--- a/src/scss/common/_classes.scss
+++ b/src/scss/common/_classes.scss
@@ -1,4 +1,5 @@
-@use '../variables' as *;
+@use '../presets/skin' as  *;
+@use '../presets/variables' as *;
 
 .item-hidden {
     position: absolute;
@@ -15,4 +16,8 @@
 .container {
     width: min(100% - $gap-lg, $container-primary);
     margin-inline: auto;
+}
+.section {
+    padding-top: 101px;
+    padding-bottom: 89px;
 }
