--- a/src/scss/common/_typography.scss
+++ b/src/scss/common/_typography.scss
@@ -1,4 +1,7 @@
-@use '../variables' as *;
+@use '../presets/skin' as  *;
+@use '../presets/variables' as *;
+
+
 * {
     box-sizing: border-box;
     margin: 0;
