--- a/src/scss/presets/_variables.scss
+++ b/src/scss/presets/_variables.scss
@@ -1,9 +1,3 @@
-$color-blue: #34547a;
-$color-description: #717171;
-$color-light: #eeeff1;
-$color-white: #fff;
-$color-black: #000;
-
 $font-family: 'Roboto', sans-serif;
 $font-size: 16px;
 
@@ -17,3 +11,7 @@ $gap: 20px;
 $gap-sm: calc($gap * .5);
 $gap-md: calc($gap * 1.5);
 $gap-lg: calc($gap * 2);
+
+$lg: 992px; // Large (medium screens)
+$md: 768px; // Medium (tablets)
+$sm: 576px; // Small (mobile devices)
